<resources>
    <string name="app_name">TakeCare</string>
    <string name="btn_inis_s">Iniciar Sesion</string>
    <string name="et_nombre">Introduce tu Nombre</string>
    <string name="et_password">Introduce el password</string>
    <string name="tv_text">Iniciar Sesion en TakeCare</string>
    <string name="tv_reg">Resitrate en TakeCare</string>
    <string name="tv_f_pas">¿Olvidaste tu contraseña?</string>
    <string name="msg_no_data">Introduzca todos los campos</string>
    <string name="tv_text2">Crea tu Cuenta</string>
    <string name="btn_c_cuenta">Registrarse</string>
    <string name="et_cor_elec">Correo Electronico *</string>
    <string name="et_num_tel">Número de telefono</string>
    <string name="et_com_password">Contraseña *</string>
    <string name="et_f_password">Contraseña *</string>
    <string name="et_nom">Nombre de Usuario*</string>
    <string name="msj_no_registrado">No se ha podido registrar un usuario Introduce los campos obligatorios</string>
    <string name="msj_registrado">Se ha registrado un Usuario</string>
    <string name="msj_no_accede">No se ha registrado un usuario</string>
    <string name="C_Oblg">* Campos obligatorios</string>
    <string name="toast_a2_datos_no_coinciden">Las contraseñas no coinciden</string>
    <string name="msj_no_datos">Debes introducir los campos obligatorios</string>
    <string name="tv_inicio">Email del usuario conectado; \n %1$s</string>
    <string name="et_mail">Introduce tu mail</string>
    <string name="itm_desconectar">Desconectar</string>
    <string name="tv_r_pas">Resetear password</string>
    <string name="btn_reset">Restablecer contraseña</string>
    <string name="btn_cancelar_a2">Cancelar</string>
    <string name="toast_a2_faltan_datos">Debe introducir todos los datos</string>
    <string name="i_mail">Debes de ingresar el mail</string>
    <string name="no_correo_restablecido">No se ha enviado el correo de restablecer contraseña</string>
    <string name="correo_enviado">Se ha enviado un correo para restablecer tu contraseña</string>
    <string name="home">Inicio</string>
    <string name="ajustes">Ajustes</string>
    <string name="mensajes">Mensajes</string>
    <string name="inicio">Inicio</string>
    <string name="itm_home">Home</string>
    <string name="itm_sms">SMS</string>
    <string name="itm_publicacion">Publicar</string>
    <string name="Home">Home</string>
    <string name="publicidad">Publicidad</string>
    <string name="sms">Sms</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_fragment">No se encuentra ningun fragmento</string>
    <string name="tv_nombre">GRUPO TAKE CARE</string>
    <string name="et_desc_anuncio">Introduce motivo con de detalles de tu Anuncio</string>
    <string name="btn_imagen">Escoge una imagen</string>
    <string name="btn_publicar_anuncio">Publicar</string>
    <string name="tv_anuncios">Anuncios</string>
    <string name="publicando_anuncio">Publicando anuncio</string>
    <string name="no_data">Tienes que introducir todos los campos</string>
    <string name="et_descripcion">Describe tu necesidad</string>
    <string name="itm_ajustes">Ajustes</string>
    <string name="tv_frag_titulo">Ajustes</string>
    <string name="btn_about">Nosotros</string>
    <string name="btn_bibliografia">Bibliografia</string>
    <string name="btn_logout">Desconectarse</string>
    <string name="no_imagen">Tienes que escoger una imagen de tu necesidad</string>
    <string name="reserva">"Has reservado "</string>
    <string name="btnReserva">Reserva</string>
    <string name="btn_reserva">Reservar</string>
    <string name="diego">Diego Rodriguez</string>
    <string name="soriano">Alberto Soriano</string>
    <string name="privacidad_cuenta">Privacidad de la cuenta; </string>
    <string name="desc_priv_cuenta">Si tu cuenta es privada, solo las personas que apruebes podrán ver tus fotos y vídeos en Instagram. Esto no afectará a tus seguidores actuales.</string>
    <string name="c_privada">Cuenta privada</string>
    <string name="tv_datos_cuenta">ver datos cuenta</string>
    <string name="tv_cambiar_contraseña">Cambiar contraseña</string>
    <string name="btn_p_seguridad">Privacidad y Seguridad</string>
    <string name="tv_p_privacidad">Política de Privacidad;</string>
    <string name="tv_d_p_privacidad">Explica la información que recopilamos, el motivo por el que lo hacemos, cómo la utilizamos y cómo revisamos y actualizamos esta información.</string>
    <string name="tv_c_google">Cuenta de Google</string>
    <string name="tv_d_c_google">Controla, protege y mantén segura tu cuenta, todo desde un solo lugar. En tu cuenta de Google puedes acceder rápidamente a la configuración y las herramientas que te permiten proteger tus datos y tu privacidad.</string>
    <string name="descripcion">"Descipcion;" + "\n" + " hoola"</string>
    <string name="descripcion_diego">Descipcion; Me llamo Diego tengo 20 años y soy programador de aplicaciones, vivo en Madrid y soy una persona muy deportista.</string>
    <string name="descripcion_soriano">Descipcion; Soy Alberto, tengo 25 años y mantengo una relación amor odio con programación, aún así seguimos adelante creando apps para teléfonos movil</string>
    <string name="nombreUsu">TakeCare</string>
    <string name="btn_r_contraseña">Recordar contraseña</string>
    <string name="btn_registro">Unirme a TakeCare</string>
</resources>