<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bordes_redondos_r"
    android:padding="16dp"
    tools:context=".ResetPassword">

    <TextView
        android:id="@+id/tvRPas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_r_pas"
        android:textColor="@color/secondaryColor"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.087">

    </TextView>

    <EditText
        android:id="@+id/etMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:hint="@string/et_mail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRPas">

    </EditText>

    <LinearLayout
        android:id="@+id/ll1A2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etMail"
        android:orientation="horizontal"
        android:background="@drawable/bordes_redonods_blancos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etMail">

        <Button
            android:id="@+id/btnReset"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_reset" />

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="cancelar"
            android:text="@string/btn_cancelar_a2" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>