<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".publicaciones.PublicacionesMain">

    <Button
        android:id="@+id/btnImagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_imagen" />

    <EditText
        android:id="@+id/etNomAnuncio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@id/btnImagen"
        android:hint="@string/et_nom_anuncio" />

    <ImageView
        android:id="@+id/ivAnuncio"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/pbAnuncio"
        android:layout_below="@id/etNomAnuncio"
        android:layout_marginTop="16dp" />

    <ProgressBar
        android:id="@+id/pbAnuncio"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnPublicarAnuncio"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnPublicarAnuncio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_publicar_anuncio" />

    <TextView
        android:id="@+id/tvAnuncios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/btnPublicarAnuncio"
        android:layout_alignTop="@id/btnPublicarAnuncio"
        android:layout_marginLeft="25dp"
        android:layout_toRightOf="@id/btnPublicarAnuncio"
        android:gravity="center"
        android:text="@string/tv_anuncios"
        android:textSize="16sp" />

</RelativeLayout>