<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".publicaciones.AnunciosMain">

        <ImageView
            android:id="@+id/volverMain"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="12dp"
            android:layout_gravity="start"
            android:onClick="volver"
            android:src="@drawable/ic_volver"/>

    <LinearLayout
        android:id="@+id/llInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnArchivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/btn_imagen" />

        <LinearLayout
            android:id="@+id/llEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivArchivo"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_below="@id/llInfo"
                android:layout_gravity="center"
                android:src="@drawable/ic_imagenes"
                android:layout_marginLeft="10dp" />

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="15dp"
                android:layout_toRightOf="@id/btnArchivo"
                android:inputType="textAutoCorrect"
                android:layout_weight="3"
                android:gravity="center_horizontal"
                android:background="@drawable/bordes_redondos_grises"
                android:hint="@string/et_nombre" />

            <EditText
                android:id="@+id/etDescripcion"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:padding="15dp"
                android:layout_toRightOf="@id/btnArchivo"
                android:layout_weight="3"
                android:inputType="textAutoCorrect"
                android:gravity="center_horizontal"
                android:background="@drawable/bordes_redondos_grises"
                android:hint="@string/et_desc_anuncio" />

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pbLineal"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llInfo"
        android:layout_alignParentLeft="true"
        android:backgroundTint="@color/primaryColor"
        android:paddingTop="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pbLineal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnPublicar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pbAnuncio"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/btn_publicar_anuncio" />

            <TextView
                android:id="@+id/tvAnuncion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/btnPublicar"
                android:layout_alignTop="@id/btnPublicar"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/btnPublicar"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tv_anuncios"
                android:textSize="24sp"
                android:textColor="@color/primaryColor"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>